# BOT2026

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
backtest/: data_loader.py  engine.py  report.py  simulator.py
config/: config.yaml
core/: data_feed.py  order_executor.py  pnl_tracker.py  risk_manager.py  strategy.py
dashboard/: Dockerfile  app.py
db/: models.py
docs/superpowers/plans/: 2026-05-19-scalping-bot-phase1.md  2026-05-19-scalping-bot-phase2.md
docs/superpowers/specs/: 2026-05-19-scalping-bot-phase1-design.md  2026-05-19-scalping-bot-phase2-design.md  2026-05-19-scalping-bot-phase3-design.md
models/: events.py
notifications/: telegram_alert.py
tests/: test_backtest_engine.py  test_pnl_tracker.py  test_risk_manager.py  test_simulator.py  test_strategy.py
