[project]
name = "scalping-bot"
version = "0.1.0"
description = "Bot de scalping automatique pour crypto (Binance Futures)"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0",
    "pandas>=2.0",
    "ta>=0.11",
    "aiosqlite>=0.19",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "matplotlib>=3.7",
    "streamlit>=1.30",
    "plotly>=5.18",
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
include = ["core*", "db*", "models*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
